@@ -6,6 +6,7 @@ package com.mhaque.javase.model;
 import static org.junit.Assert.*;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -26,7 +27,7 @@ public class AppleTest {
 
 	@Before
 	public void setUp() {
-		apples = List.of(new Apple(80, "green"), new Apple(80, "yellow"), new Apple(155, "green"),
+		apples = Arrays.asList(new Apple(80, "green"), new Apple(80, "yellow"), new Apple(155, "green"),
 				new Apple(120, "red"));
 	}
 
